kenya/patients/static/css/message.css
.Client,.Nurse,.System{
margin: 5px 0px;
padding: 3px 5px 3px 5px;
width: 60%;
clear: both;
color: rgb(255,255,255);
}

.Client{
float: left;
margin-right: auto;
background-color: rgb(91,141,147);
}

.System,.Nurse{
float: right;
margin-left: auto;
text-align: right;
}

.System{
background-color: rgb(214,214,214);
color: rgb(0,0,0);
}

.Nurse{
background-color: rgb(168,140,91);
}

.Body{
margin-top: 500px;
}

.Boxes
{
position: fixed;
width: 100%;
height: 100px;
top: 0px;
}

.Box{
/*position: fixed; */
top: 50px; 
left: 0px; 
width: 100%; 
height: 100px; 
background-color: rgb(240,240,240); 
overflow: hidden; 
}

.Box1{
/*position: fixed; */
top: 50px; 
left: 0px; 
width: 100%; 
height: 100px; 
background-color: rgb(120,240,240); 
overflow: hidden; 
}

.header
{
background-color: rgb(212,200,156);
text-align: center;
font-size: 20px;
}

body
{
background-color:rgb(255,255,255);
font-family: sans-serif;
}

.content
{
text-align: left;
}

.date
{
font-size: 10px;
vertical-align: middle;
float: right;
}

.top
{
font-size:14px;
text-align: left;
}

.Clientcontent
{
font-size: 20px;
}


ul.tabs {
    width:250px;
    margin:0;
    padding:0;
}
ul.tabs li {
    display:block;
    float:left;
    padding:0 5px;
}
ul.tabs li a {
    display:block;
    float:left;
    padding:5px;
    font-size:0.8em;
    background-color:#e0e0e0;
    color:#666;
    text-decoration:none;
}
.selected {
    font-weight:bold;
}
.tab-content {
}

